# Azure-M365-MCP

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  RELEASE_LOG.md  SECURITY.md  cursor-mcp-alternatives.txt  cursor-mcp-config-fixed.json  docker-compose.yml  env.example  mcp-config.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: continuous-integration.yml  release.yml
docs/: client-setup.md
tests/: README.md  README_DOCKER_TEST.md  conftest.py  docker-compose.test.yml
tests/integration/: test_docker.py  test_server.py  test_startup.py  test_transports.py
tests/unit/: test_azure_cli_service.py  test_config.py  test_execution_policy.py  test_graph_service.py  test_mock_mode.py  test_security.py
unified_mcp/: __init__.py  application.py  auth.py  config.py  execution_policy.py  main.py  process.py  security.py  transports.py
unified_mcp/services/: __init__.py  azure_cli_service.py  azure_login_handler.py  graph_service.py
unified_mcp/testing/: __init__.py  fakes.py
