[project]
name = "unified-microsoft-mcp"
version = "1.1.0"
description = "Unified Microsoft MCP Server combining Azure CLI and Microsoft Graph API tools"
authors = [{name = "JackInSightsV2"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "mcp>=1.27,<2",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "azure-identity>=1.15,<2",
    "httpx>=0.25,<1",
    "starlette>=0.35,<1",
    "fastapi>=0.109,<1",
    "uvicorn>=0.27,<1",
]

[project.urls]
Homepage = "https://github.com/JackInSightsV2/Azure-M365-MCP"
Repository = "https://github.com/JackInSightsV2/Azure-M365-MCP"

[project.scripts]
unified-microsoft-mcp = "unified_mcp.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=0.24,<2",
    "pytest-mock>=3.12,<4",
    "pytest-cov>=5,<8",
    "black>=24,<27",
    "ruff>=0.12,<1",
    "mypy>=2.3.0,<3",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["unified_mcp*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "docker: marks tests that start Docker Compose",
]
